Top padding for fixed nav bar
Add some padding to all body styles so that it wouldn’t get cut off
from my fixed navigation bar.

--- a/my_styles.css
+++ b/my_styles.css
@@ -9,4 +9,6 @@ body {
 }
 
 */
-
+body {
+    padding-top: 75px;
+}
